crates/compiler/backend/tests/snapshots/bytecode__bytecode@name-of.reds.snap
---
source: crates/compiler/backend/tests/bytecode.rs
expression: "BytecodePrinter::new(&bundle, bundle_len)"
input_file: crates/compiler/backend/tests/data/name-of.reds
snapshot_kind: text
---
// Test; (f0)
assign
local 0
cname.const 0
invoke.static j16 l4 f1 0000000000000000
param.end

// Generic<Int32>; (f1)
assign
local 1
cname.const 0
