crates/compiler/backend/tests/snapshots/bytecode__bytecode@static-receiver.reds.snap
---
source: crates/compiler/backend/tests/bytecode.rs
expression: "BytecodePrinter::new(&bundle, bundle_len)"
input_file: crates/compiler/backend/tests/data/static-receiver.reds
---
// Dummy::TakesSelf;Dummy (f0)

// Dummy::TakesScriptRef;Dummy (f1)

// Test; (f2)
assign
local 0
struct.new 0 0
invoke.static j25 l4 f0 0000000000000000
local 0
param.end
invoke.static j34 l5 f1 0000000000000000
as_ref 0
local 0
param.end
