crates/compiler/backend/tests/snapshots/bytecode__bytecode@string-interp.reds.snap
---
source: crates/compiler/backend/tests/bytecode.rs
expression: "BytecodePrinter::new(&bundle, bundle_len)"
input_file: crates/compiler/backend/tests/data/string-interp.reds
snapshot_kind: text
---
// Test;Int32 (f0)
assign
local 0
i32.const 1990
assign
local 1
string.const 0
return
invoke.static j212 l5 f1 0000000000000011
as_ref 0
invoke.static j173 l5 f1 0000000000000011
as_ref 0
invoke.static j96 l5 f1 0000000000000011
as_ref 0
invoke.static j57 l5 f1 0000000000000011
as_ref 0
string.const 1
as_ref 0
to_string 0
local 1
param.end
as_ref 0
string.const 2
param.end
as_ref 0
to_string 1
invoke.static j34 l1 f2 0000000000000000
param 0
local 0
param.end
param.end
as_ref 0
string.const 3
param.end

// OperatorAdd (f1)

// OperatorSubtract (f2)
