crates/compiler/backend/tests/snapshots/bytecode__bytecode@string-literal.reds.snap
---
source: crates/compiler/backend/tests/bytecode.rs
expression: "BytecodePrinter::new(&bundle, bundle_len)"
input_file: crates/compiler/backend/tests/data/string-literal.reds
snapshot_kind: text
---
// Test; (f0)
assign
local 0
string.const 0
assign
local 1
cname.const 0
assign
local 2
resource.const 0
assign
local 3
tweakdb.const 0
